crates/test-ui/ui/stack_block_with_encoding_requires_clone.stderr
error[E0277]: the trait bound `Foo: Clone` is not satisfied in `{closure@$DIR/ui/stack_block_with_encoding_requires_clone.rs:15:59: 15:66}`
 --> ui/stack_block_with_encoding_requires_clone.rs
  |
  |       let _ = StackBlock::with_encoding::<FooBlockEncoding>(move || {
  |               --------------------------------------------- ^------
  |               |                                             |
  |  _____________|_____________________________________________within this `{closure@$DIR/ui/stack_block_with_encoding_requires_clone.rs:15:59: 15:66}`
  | |             |
  | |             required by a bound introduced by this call
  | |         let _ = &foo;
  | |     });
  | |_____^ unsatisfied trait bound
  |
  = help: within `{closure@$DIR/ui/stack_block_with_encoding_requires_clone.rs:15:59: 15:66}`, the trait `Clone` is not implemented for `Foo`
note: required because it's used within this closure
 --> ui/stack_block_with_encoding_requires_clone.rs
  |
  |     let _ = StackBlock::with_encoding::<FooBlockEncoding>(move || {
  |                                                           ^^^^^^^
note: required by a bound in `StackBlock::<'f, A, R, Closure>::with_encoding`
 --> $WORKSPACE/crates/block2/src/stack.rs
  |
  |     Closure: IntoBlock<'f, A, R> + Clone,
  |                                    ^^^^^ required by this bound in `StackBlock::<'f, A, R, Closure>::with_encoding`
...
  |     pub fn with_encoding<E>(closure: Closure) -> Self
  |            ------------- required by a bound in this associated function
help: consider annotating `Foo` with `#[derive(Clone)]`
  |
4 + #[derive(Clone)]
5 | struct Foo;
  |
